--- a/client/src/app/pages/dashboard/dashboard.component.html
+++ b/client/src/app/pages/dashboard/dashboard.component.html
@@ -18,7 +18,7 @@
           <mat-card *ngIf="!isLoadingStats">
             <mat-card-content>
               <h2>{{ userCount }}</h2>
-              <p>Total users</p>
+              <p>Total active users</p>
             </mat-card-content>
           </mat-card>
           <app-skeleton *ngIf="isLoadingStats"></app-skeleton>
