--- a/client/src/app/app.component.scss
+++ b/client/src/app/app.component.scss
@@ -25,3 +25,34 @@
   flex: 1;
   padding: 10px 10px 10px 20px;
 }
+
+
+::ng-deep {
+  .modal-background {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.5);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .modal-container {
+    background: #fff;
+    margin-top: 20px;
+    padding: 20px;
+    border-radius: 5px;
+    width: 30%;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+    .form {
+      display: flex;
+      flex-direction: column;
+      label {
+        color: #555;
+      }
+    }
+  }
+}
